Make dotnet build pass in both Android and Windows.

--- a/SpaceEscape.Android/SpaceEscape.Android.csproj
+++ b/SpaceEscape.Android/SpaceEscape.Android.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\SpaceEscape.Game\SpaceEscape.Game.csproj" />
   </ItemGroup>
 
+  <ItemDefinitionGroup>
+    <ReferencePath>
+      <CopyLocal>false</CopyLocal>
+    </ReferencePath>
+  </ItemDefinitionGroup>
 </Project>
