--- a/SpaceEscape.Game/SpaceEscape.Game.csproj
+++ b/SpaceEscape.Game/SpaceEscape.Game.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
+
+  <ItemDefinitionGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+    <ReferencePath>
+      <CopyLocal>false</CopyLocal>
+    </ReferencePath>
+  </ItemDefinitionGroup>
 </Project>
